tests/NormalTests/paczka1/fuzzy1/78146213.err
Error in line 2: lO1Ks4fL A770 35,8
Error in line 17: skJiKs S860 22,9
Error in line 19: skJiKs S187 5,4
Error in line 23: layEK A530 74,27
Error in line 14: lO1Ks4fL S187 85,1
Error in line 31: S860 S860 <3,6
Error in line 27: S860 A530 66,5
Error in line 11: JEXX1rZAtzS A770 56,2
